--- a/final_project/Makefile
+++ b/final_project/Makefile
@@ -1,35 +1,13 @@
-TARGET_EXEC := final_program
+# TARGET
+#TargetL pre-requisites
+#	commands;
 
-BUILD_DIR := ./build
-SRC_DIRS := ./src
-
-SRCS := $(shell find $(SRC_DIRS) -name '*.cpp' -or -name '*.c' -or -name '*.s')
-
-OBJS := $(SRCS:%:$(BUILD_DIR)/%.o)
-
-DEPS := $(OBJS:.o=.d)
-
-INC_DIRS := $(shell find $(SRC_DIRS) -type d)
-
-INC_FLAGS := $(addprefix -I,$(INC_DIRS))
-
-CPPFLAGS := $(INC_FLAGS) -MMD -MP
-
-$(BUILD_DIR)/$(TARGET_EXEC): $(OBJS)
-	$(CXX) $(OBJS) -o $@ $(LDFLAGS)
-
-
-$(BUILD_DIR)/%.c.o: %.c
-	mkdir -p $(dir $@)
-	$(CC) $(CPPFLAGS) $(CFLAGS) -c $< -o $@
-
-$(BUILD_DIR)/%.cpp.o: %.cpp
-	mkdir -p $(dir $@)
-	$(CXX) $(CPPFLAGS) $(CXXFLAGS) -c $< -o $@
-
-.PHONY: clean
+build:
+	g++ main.cpp -o main
+	#g++ main.o -o main
+	
+execute:
+	./main
 
 clean:
-	rm -rf $(BUILD_DIR)
-
--include $(DEPS)
+	rm -rf main
